<resources>
    <string name="app_name">AlarmButton</string>
    <string name="action_settings">Settings</string>
    <string name="Langtitude">" широты "</string>
    <string name="Logntitude">" долготы"</string>
    <string name="SaveMe">"Я в опастности! Помогите! Я нахожусь - "</string>
    <string name="saved_high_score">Preferences</string>
    <string name="MessageSentToast">Message Sent! Hold on! You will be saved soon!</string>
    <string name="SettingsButtonText">Settings</string>
    <string name="AlarmButtonText">SAVE ME!</string>
    <string name="NameTextHing">Enter your name</string>
    <string name="MailTextHing">Enter your email address</string>
    <string name="PassTextHing">Enter password from your mail</string>
    <string name="SaveButton">Save</string>
    <string name="numbersArrayTextview">Numbers list</string>
    <string name="emailArrayTextview">eMails list</string>
    <string name="add">Add</string>
    <string name="cancel">cancel</string>
    <string name="textview_add_number_dialog">Enter the telephone number you want to add. For example "+38 048 111 11 11" (without backspaces)</string>
    <string name="OwnMailCheckBox">I want to use my own email address to send Alarms</string>
    <string name="repeatCheckBoxText">I want send Alarms repeatedly</string>
    <string name="repeatSeekBarTextViewDefultText">Choose interval of sending Alarms (in minutes) = 5 (defoult)</string>
</resources>
